--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -26,7 +26,7 @@ Un composant Astro est composé de deux parties principales : le **Script du com
 <!-- Template du composant (HTML + Expressions JS) -->
 ```
 
-Vous pouvez utiliser des composants à l'intérieur d'autres composants pour créer une interface utilisateur de plus en plus complexe. Par exemple, un composant `Button` pourrait être utilisé pour créer un composant `ButtonGroup` comme ceci :
+Vous pouvez utiliser des composants à l'intérieur d'autres composants pour créer une interface utilisateur de plus en plus complexe. Par exemple, un composant `Button` pourrait être utilisé pour créer un composant `ButtonGroup` comme ceci :
 
 ```astro
 ---
@@ -67,7 +67,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 
 Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l’intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur de votre utilisateur.
 
-:::tip Vous pouvez même écrire du TypeScript dans votre script de composant ! :::
+:::tip Vous pouvez même écrire du TypeScript dans votre script de composant ! :::
 
 ### Le Template du composant
 
@@ -98,13 +98,13 @@ const myFavoritePokemon = [/* ... */];
   {myFavoritePokemon.map((data) => <li>{data.name}</li>)}
 <ul>
 
-<!-- Utilisez une directive de template pour créer des classes à partir de plusieurs chaînes ou même d'objets ! -->
-<p class:list={["add", "dynamic", {classNames : true}]} />
+<!-- Utilisez une directive de template pour créer des classes à partir de plusieurs chaînes ou même d'objets ! -->
+<p class:list={["add", "dynamic", {classNames : true}]} />
 ```
 
 ## Expressions JSX
 
-Vous pouvez définir des variables JavaScript locales à l'intérieur des barres de code du script du composant dans un composant Astro. Vous pouvez ensuite injecter ces variables dans le template HTML du composant à en utilisant des expressions de type JSX !
+Vous pouvez définir des variables JavaScript locales à l'intérieur des barres de code du script du composant dans un composant Astro. Vous pouvez ensuite injecter ces variables dans le template HTML du composant à en utilisant des expressions de type JSX !
 
 :::note[dynamic vs réactif] En utilisant cette approche, vous pouvez inclure des valeurs **dynamiques** qui sont calculées dans le frontmatter. Mais une fois incluses, ces valeurs ne sont pas **réactives** et ne changeront jamais. Les composants Astro sont des templates qui ne s'exécutent qu'une seule fois, au moment de la compilation.
 
@@ -112,7 +112,7 @@ Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#diffe
 
 ### Variables
 
-Des variables locales peuvent être ajoutées dans le HTML en utilisant la syntaxe des accolades :
+Des variables locales peuvent être ajoutées dans le HTML en utilisant la syntaxe des accolades :
 
 ```astro
 ---
@@ -125,7 +125,7 @@ const name = "Astro";
 
 ### Attributs dynamiques
 
-Les variables locales peuvent être utilisées entre accolades pour transmettre des valeurs d'attribut aux éléments HTML et <br> aux composants :
+Les variables locales peuvent être utilisées entre accolades pour transmettre des valeurs d'attribut aux éléments HTML et aux composants :
 
 ```astro
 ---
@@ -136,7 +136,7 @@ const name = "Astro";
 <MyComponent templateLiteralNameAttribute={`MonNomEst${name}`} />
 ```
 
-:::caution Les attributs HTML seront convertis en chaînes, il n'est donc pas possible de passer des fonctions et des objets aux éléments HTML. Par exemple, vous ne pouvez pas affecter un gestionnaire d'événements à un élément HTML dans un composant Astro :
+:::caution Les attributs HTML seront convertis en chaînes, il n'est donc pas possible de passer des fonctions et des objets aux éléments HTML. Par exemple, vous ne pouvez pas affecter un gestionnaire d'événements à un élément HTML dans un composant Astro :
 
 ```astro
 // dont-do-this.astro
@@ -148,7 +148,7 @@ console.log("boutton cliqué!");
 <button onClick={handleClick}>Rien ne se passera lorsque vous cliquez sur moi!</button>
 ```
 
-Au lieu de cela, utilisez un script côté client pour ajouter le gestionnaire d'événements, comme vous le feriez en JavaScipt pure :
+Au lieu de cela, utilisez un script côté client pour ajouter le gestionnaire d'événements, comme vous le feriez en JavaScipt pure :
 
 ```astro
 ---
@@ -168,7 +168,7 @@ Au lieu de cela, utilisez un script côté client pour ajouter le gestionnaire d
 
 ### HTML dynamique
 
-Les variables locales peuvent être utilisées dans des fonctions de type JSX pour produire des éléments HTML générés dynamiquement :
+Les variables locales peuvent être utilisées dans des fonctions de type JSX pour produire des éléments HTML générés dynamiquement :
 
 ```astro
 ---
@@ -194,10 +194,9 @@ const visible = true;
 
 ### Balises dynamiques
 
-Vous pouvez également utiliser des balises dynamiques en définissant une variable affectée d'un nom de balise HTML ou d'un composant importé :
+Vous pouvez également utiliser des balises dynamiques en définissant une variable affectée d'un nom de balise HTML ou d'un composant importé :
 
 ```astro
----
 ---
 import MyComponent from "./MyComponent.astro";
 const Element = 'div'
@@ -208,7 +207,7 @@ const Component = MyComponent;
 <Component /> <!-- s'affiche comme <MyComponent /> -->
 ```
 
-Lors de l'utilisation de balises dynamiques :
+Lors de l'utilisation de balises dynamiques :
 
 - **Les noms de variables doivent commencer par une lettre majuscules.** Par exemple, utilisez `Element` , et non `element` . Sinon, Astro essaiera de restituer le nom de votre variable sous la forme d'une balise HTML littéralement.
 
@@ -243,7 +242,7 @@ const items = ["Chien", "Chat", "Ornithorynque"];
 </ul>
 ```
 
-Les fragments peuvent également être utiles pour éviter d'utiliser des éléments englobants lors de l'ajout [de directives `set:*`](/en/reference/directives-reference/#sethtml) , comme dans l'exemple suivant :
+Les fragments peuvent également être utiles pour éviter d'utiliser des éléments englobants lors de l'ajout [de directives `set:*`](/fr/reference/directives-reference/#sethtml) , comme dans l'exemple suivant :
 
 ```astro
 ---
@@ -293,7 +292,7 @@ const { greeting, name } = Astro.props;
 <h2>{greeting}, {name}!</h2>
 ```
 
-Ce composant, lorsqu'il est importé et rendu dans d'autres composants standards,  Composants Layout ou pages Astro, peut recevoir ces props en tant qu'attributs :
+Ce composant, lorsqu'il est importé et rendu dans d'autres composants standards,  Composants Layout ou pages Astro, peut recevoir ces props en tant qu'attributs :
 
 ```astro
 ---
@@ -303,7 +302,7 @@ const name = "Astro"
 ---
 <h1>Carte de vœux</h1>
 <GreetingHeadline greeting="Salut" name={name} />
-<p>J'espère que vous passez une merveilleuse journée !</p>
+<p>J'espère que vous passez une merveilleuse journée !</p>
 ```
 
 Vous pouvez également définir le type de vos props avec TypeScript en créant une interface nommée `Props`. Astro sélectionnera automatiquement l'interface `Props` dans le Script du Composant et donnera des avertissements/erreurs de type. Ces props peuvent également recevoir des valeurs par défaut lorsqu'ils sont déstructurés à partir d' `Astro.props` .
@@ -370,7 +369,7 @@ import Wrapper from '../components/Wrapper.astro';
 </Wrapper>
 ```
 
-Ce modèle est à la base d'un Composant Layout dans Astro : une page entière de contenu HTML peut être "enveloppée" avec des balises `<Layout></Layout>` et envoyée à au Composant Layout pour être rendu à l'intérieur des éléments de page communs.
+Ce modèle est à la base d'un Composant Layout dans Astro : une page entière de contenu HTML peut être "enveloppée" avec des balises `<Layout></Layout>` et envoyée à au Composant Layout pour être rendu à l'intérieur des éléments de page communs.
 
 ### Les emplacements nommés
 
@@ -492,7 +491,7 @@ Par défaut, Astro traite et regroupe les balises `<script>` , ajoutant la prise
 
 Astro prend en charge l'importation et l'utilisation de fichiers `.html` en tant que composants ou le placement de ces fichiers dans le sous-répertoire `src/pages` en tant que pages. Vous souhaiterez peut-être utiliser des composants HTML si vous réutilisez le code d'un site existant construit sans framework, ou si vous voulez vous assurer que votre composant n'ai pas de fonctionnalités dynamiques.
 
-Les composants HTML ne doivent contenir que du code HTML valide et ne disposent donc pas des fonctionnalités clés des composants Astro :
+Les composants HTML ne doivent contenir que du code HTML valide et ne disposent donc pas des fonctionnalités clés des composants Astro :
 
 - Ils ne prennent pas en charge de Script de Composant, les importations côté serveur ou les expressions dynamiques.
 - Toutes les balises `<script>` sont laissées non regroupées, traitées comme si elles avaient `is:inline` .
