tweak build assets section

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -103,11 +103,11 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 ### Added: `_astro/` folder for build assets
 
-Astro 2.0 moves the location of all build output assets to a new `_astro/` folder. Previously, these assets were built to various locations, including `assets/`, `chunks/` and the root of the build output. You can control this location with the new `build.assets` configuration option.
+Astro 2.0 moves the location of all build output assets to a new `_astro/` folder. Previously, these assets were built to various locations, including `assets/`, `chunks/` and the root of the build output. 
 
-This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
+You can control this location with the [new `build.assets` configuration option](/en/reference/configuration-reference/#buildassets).
 
-If your deployment relies on the location assets, you may need to update your caching configuration with your deployment platform.
+If your deployment relies on the location of these assets, you may need to update your caching configuration with your deployment platform.
 
 ### Changed: Markdown plugin configuration
 
