text for reserved content folder

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -237,7 +237,9 @@ This allows plugin authors to modify existing frontmatter, or compute new proper
 
 ### Added: `src/content/`
 
-Write stuff: if you have an existing `src/content/` folder, it will now conflict with content collections.
+In 2.0, the [Collections API is no longer hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder. 
+
+If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This folder can now only be used for [content collections](/en/guides/content-collections/).
 
 ## Astro 2.0 Experimental Flags Removed
 
