Feat: updating 'layouts' page Franch translation

--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -109,6 +109,67 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
+### Propriétés de mise-en-page Markdown
+
+Un layout Markdown/MDX aura accès aux informations suivantes via `Astro.props` :
+
+- **`file`** - Le chemin absolu de ce fichier (exemple : `/home/user/projects/.../file.md`).
+- **`url`** - Si c'est une page, l'URL de cette page (exemple : `/fr/guides/markdown-content`).
+- **`frontmatter`** - Tous les éléments frontmatter du document Markdown ou MDX.
+- **`frontmatter.file`** - Identique à la propriété `file` de premier niveau.
+- **`frontmatter.url`** - Identique à la propriété `url` de premier niveau.
+- **`headings`** - Une liste de titre (`h1 -> h6`) dans le document Markdown ou MDX avec les métadonnées associées. Cette liste suit le type : `{ depth: number; slug: string; text: string }[]`.
+- **(Markdown only) `rawContent()`** - Une fonction qui renvoie le document Markdown brut sous forme de chaine de caractères.
+- **(Markdown only) `compiledContent()`** - Une fonction qui renvoie le document Markdown compilé en tant que chaine de caractères HTML.
+
+Un exemple de billet de blog en format Markdown peut transmettre l'objet `Astro.props` suivant à son layout :
+
+```js
+Astro.props = {
+  file: "/home/user/projects/.../file.md",
+  url: "/fr/guides/markdown-content/",
+  frontmatter: {
+    /** Frontmatter depuis un article de blog */
+    title: "Astro 0.18 Release",
+    date: "Tuesday, July 27 2021",
+    author: "Matthew Phillips",
+    description: "Astro 0.18 is our biggest release since Astro launch.",
+    /** Valeurs générées */
+    file: "/home/user/projects/.../file.md",
+    url: "/fr/guides/markdown-content/"
+  },
+  headings: [
+    {
+      "depth": 1,
+      "text": "Astro 0.18 Release",
+      "slug": "astro-018-release"
+    },
+    {
+      "depth": 2,
+      "text": "Responsive partial hydration",
+      "slug": "responsive-partial-hydration"
+    }
+    /* ... */
+  ],
+
+  /** Disponible en Markdown uniquement */
+  rawContent: () => "# Astro 0.18 Release\nIl y a un peu plus d'un mois, la première bêta publique [...]",
+  compiledContent: () => "<h1>Astro 0.18 Release</h1>\n<p>Il y a un peu plus d'un mois, la première bêta publique [...]</p>",
+}
+```
+
+:::note
+Un layout Markdown/MDX aura accès à toutes les [propriétés exportées de son fichier](/fr/guides/markdown-content/#exported-properties) depuis `Astro.props` **avec quelques différences essentielles :**
+
+*   Informations sur l'en-tête (c.-à-d. les éléments `h1 -> h6`) sont disponibles via le tableau `headings`, plutôt qu'une fonction `getHeadings()`.
+
+*   `file` et `url` sont *aussi* disponibles comme propriétés `frontmatter` imbriquées (c.-à-d. `frontmatter.url` et `frontmatter.file`).
+
+*   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer un layout](#importation-manuelle-de-layout-mdx) à la place.
+:::
+
+### Importation manuelle de Layouts (MDX)
+
 ## Layouts Markdown
 
 Les composants Layouts sont particulièrement utiles pour les [fichiers Markdown](/fr/guides/markdown-content/#pages-markdown). Les fichiers Markdown peuvent utiliser la propriété `layout` dans leur en-tête pour spécifier un composant Layout qui va entourer leur contenu Markdown dans une page HTML complète.
