--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -12,7 +12,7 @@ Ready to install Astro? Follow our automatic or manual setup guide to get starte
 
 #### Prerequisites
 
-- **Node.js** - `14.18.0`, `v16.12.0`, or higher.
+- **Node.js** - `v16.12.0` or higher.
 - **Text editor** - We recommend [VS Code](https://code.visualstudio.com/) with our [Official Astro extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro is accessed through its command-line interface (CLI).
 
