Close `<br />` properly!

--- a/src/pages/pt-br/reference/configuration-reference.mdx
+++ b/src/pages/pt-br/reference/configuration-reference.mdx
@@ -248,7 +248,7 @@ Isso significa que quando você criar URLs relativas usando `new URL('./relativo
 
 <p>
 
-**Tipo:** `string`<br>
+**Tipo:** `string`<br />
 **Padrão:** `'./dist/client'`
 </p>
 
@@ -271,7 +271,7 @@ Esse valor é relativo ao `outDir`.
 
 <p>
 
-**Tipo:** `string`<br>
+**Tipo:** `string`<br />
 **Padrão:** `'./dist/server'`
 </p>
 
@@ -312,7 +312,7 @@ Especifica o diretório na saída da build onde assets gerados pelo Astro (JS e 
 
 <p>
 
-**Tipo:** `string`<br>
+**Tipo:** `string`<br />
 **Padrão:** `'entry.mjs'`
 </p>
 
@@ -387,8 +387,8 @@ Se a porta indicada já estiver em uso, Astro irá automaticamente tentar a pró
 
 <p>
 
-**Tipo:** `OutgoingHttpHeaders`<br>
-**Padrão:** `{}`<br>
+**Tipo:** `OutgoingHttpHeaders`<br />
+**Padrão:** `{}`<br />
 <Since v="1.7.0" />
 </p>
 
