Update `framework-components.mdx` to most recent changes

--- a/src/pages/pt-br/core-concepts/framework-components.mdx
+++ b/src/pages/pt-br/core-concepts/framework-components.mdx
@@ -10,31 +10,7 @@ Astro suporta uma variedade de frameworks populares incluindo [React](https://re
 
 ## Instalando Integrações
 
-Astro vem com integrações opcionais para React, Preact, Svelte, Vue, SolidJS, AlpineJS e Lit. Uma ou mais destas integrações podem ser instaladas e configuradas no seu projeto.
-
-Para configurar Astro para utilizar estes frameworks, primeiro, instale sua integração e quaisquer dependências associadas:
-
-```bash
-npm install --save-dev @astrojs/react react react-dom
-```
-
-Então importe e adicione a função a sua lista de integrações em `astro.config.mjs`:
-
-```js title="astro.config.mjs" ins={3} ins=/(?<!p)react\\(\\)/
-import { defineConfig } from 'astro/config';
-
-import react from '@astrojs/react';
-import preact from '@astrojs/preact';
-import svelte from '@astrojs/svelte';
-import vue from '@astrojs/vue';
-import solid from '@astrojs/solid-js';
-import lit from '@astrojs/lit';
-import alpine from '@astrojs/alpine';
-
-export default defineConfig({
-	integrations: [react(), preact(),svelte(), vue(), solid(), lit(), alpine()],
-});
-```
+Astro vem com [integrações opcionais](/pt-br/guides/integrations-guide/) para React, Preact, Svelte, Vue, SolidJS, AlpineJS e Lit. Uma ou várias destas integrações Astro podem ser instaladas e configuradas em seu projeto.
 
 ⚙️ Veja o [Guia de Integrações](/pt-br/guides/integrations-guide/) para mais detalhes em como instalar e configurar integrações Astro.
 
