fix links and other corrections

--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -9,7 +9,7 @@ i18nReady: 'true'
 
 **Si vous connaissez le HTML, vous en savez déjà assez pour écrire votre premier composant Astro.**
 
-La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#differences-between-astro-and-jsx) , et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro` .
+La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#differences-entre-astro-et-jsx) , et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro` .
 
 Les composants Astro sont extrêmement flexibles. Souvent, un composant Astro contiendra une **interface utilisateur réutilisable sur la page** , comme un en-tête ou une carte de profil. À d'autres moments, un composant Astro peut contenir un petit extrait de code HTML, comme une collection de balises `<meta>` courantes qui facilitent le travail avec le référencement. Les composants Astro peuvent même contenir la mise en page entière d'une page.
 
@@ -65,7 +65,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 <!-- Votre template ici ! -->
 ```
 
-Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l’intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur de votre utilisateur.
+Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l'intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur de votre utilisateur.
 
 :::tip Vous pouvez même écrire du TypeScript dans votre script de composant ! :::
 
@@ -75,7 +75,7 @@ Sous le script du composant, se trouve le template du composant. Le template du 
 
 Si vous écrivez du HTML simple ici, votre composant affichera cet HTML dans toutes les pages où il est importé et utilisé.
 
-De plus, la syntaxe du template du composant Astro prend également en charge les **expressions JavaScript**, les **composants importés** et les [**directives spéciales Astro**](/en/reference/directives-reference/). Les données et les valeurs définies (à la compilation) dans le script du composant peuvent être utilisées dans le template du composant pour produire du HTML dynamiquement créé.
+De plus, la syntaxe du template du composant Astro prend également en charge les **expressions JavaScript**, les **composants importés** et les [**directives spéciales Astro**](/fr/reference/directives-reference/). Les données et les valeurs définies (à la compilation) dans le script du composant peuvent être utilisées dans le template du composant pour produire du HTML dynamiquement créé.
 
 ```astro
 ---
@@ -108,7 +108,7 @@ Vous pouvez définir des variables JavaScript locales à l'intérieur des barres
 
 :::note[dynamic vs réactif] En utilisant cette approche, vous pouvez inclure des valeurs **dynamiques** qui sont calculées dans le frontmatter. Mais une fois incluses, ces valeurs ne sont pas **réactives** et ne changeront jamais. Les composants Astro sont des templates qui ne s'exécutent qu'une seule fois, au moment de la compilation.
 
-Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#differences-between-astro-and-jsx) . :::
+Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#differences-entre-astro-et-jsx) . :::
 
 ### Variables
 
@@ -139,6 +139,7 @@ const name = "Astro";
 :::caution Les attributs HTML seront convertis en chaînes, il n'est donc pas possible de passer des fonctions et des objets aux éléments HTML. Par exemple, vous ne pouvez pas affecter un gestionnaire d'événements à un élément HTML dans un composant Astro :
 
 ```astro
+---
 // dont-do-this.astro
 function handleClick () {
 console.log("boutton cliqué!");
@@ -211,7 +212,7 @@ Lors de l'utilisation de balises dynamiques :
 
 - **Les noms de variables doivent commencer par une lettre majuscules.** Par exemple, utilisez `Element` , et non `element` . Sinon, Astro essaiera de restituer le nom de votre variable sous la forme d'une balise HTML littéralement.
 
-- **Les directives d'hydratation ne sont pas prises en charge.** Lorsque vous utilisez [ les directives d'hydratation `client:*` ](/en/core-concepts/framework-components/#hydrating-interactive-components), Astro doit savoir quels composants regrouper pour la production, et le modèle de balise dynamique empêche cela de fonctionner.
+- **Les directives d'hydratation ne sont pas prises en charge.** Lorsque vous utilisez [les directives d'hydratation `client:*`](/fr/core-concepts/framework-components/#hydratation-des-composants-interactifs), Astro doit savoir quels composants regrouper pour la production, et le modèle de balise dynamique empêche cela de fonctionner.
 
 ### Fragments et éléments multiples
 
@@ -313,7 +314,7 @@ Vous pouvez également définir le type de vos props avec TypeScript en créant 
 ---
 <style>
   /* restreint au composant, les autres balises H1 sur la page restent les mêmes */
-  h1 { color: red }
+  h1 { color: red };
 </style>
 
 <h1>Hello, world!</h1>
@@ -329,7 +330,7 @@ const { greeting = "Salut", name = "Astronaute" } = Astro.props;
 <h2>{greeting}, {name}!</h2>
 ```
 
-## Les emplacements (Slots)
+## Les emplacements
 
 L'élément `<slot />` est un emplacement réservé pour du contenu HTML externe, vous permettant d'injecter des éléments enfants depuis d'autres fichiers, dans le template de votre composant.
 
@@ -338,7 +339,6 @@ Par défaut, tous les éléments enfants passés à un composant seront rendus d
 :::note Contrairement aux *props* , qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props` , *les emplacements* restituent les éléments HTML enfants là où ils sont placés. :::
 
 ```astro
-
 ---
 // src/components/Wrapper.astro
 import Header from './Header.astro';
@@ -411,7 +411,7 @@ import Wrapper from '../components/Wrapper.astro';
 
 Utilisez un attribut `slot="my-slot"` sur l'élément enfant que vous souhaitez transmettre à un emplacement `<slot name="my-slot" />` correspondant dans votre composant.
 
-:::tip Les emplacements nommés peuvent aussi être passés aux [composants de framework](/en/core-concepts/framework-components/) ! :::
+:::tip Les emplacements nommés peuvent aussi être passés aux [composants de framework](/fr/core-concepts/framework-components/) ! :::
 
 ### Contenu de repli pour les emplacement
 
@@ -485,7 +485,7 @@ Les scripts peuvent être utilisés pour ajouter des écouteurs d'événements, 
 
 Par défaut, Astro traite et regroupe les balises `<script>` , ajoutant la prise en charge de l'importation de modules npm, de l'écriture de TypeScript, etc.
 
-📚 Consultez notre [guide sur les scripts](/en/guides/client-side-scripts/) pour plus de détails.
+📚 Consultez notre [guide sur les scripts](/fr/guides/client-side-scripts/) pour plus de détails.
 
 ## Composants HTML
 
@@ -495,12 +495,12 @@ Les composants HTML ne doivent contenir que du code HTML valide et ne disposent 
 
 - Ils ne prennent pas en charge de Script de Composant, les importations côté serveur ou les expressions dynamiques.
 - Toutes les balises `<script>` sont laissées non regroupées, traitées comme si elles avaient `is:inline` .
-- Ils ne peuvent [référencer que les assets qui se trouvent dans le dossier `public/`](/en/guides/images/#public) .
+- Ils ne peuvent [référencer que les assets qui se trouvent dans le dossier `public/`](/fr/guides/images/#public) .
 
-:::note Un [élément `<slot />`](/en/core-concepts/astro-components/#slots) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>` . :::
+:::note Un [élément `<slot />`](#les-emplacements) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/fr/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>` . :::
 
 ## Étapes suivantes
 
-📚 En savoir plus sur [les composants intégrés d'Astro](/en/reference/api-reference/#built-in-components) .
+📚 En savoir plus sur [les composants intégrés d'Astro](/fr/reference/api-reference/#built-in-components) .
 
-📚 Apprendre comment utiliser [les composants de framework JavaScript](/en/core-concepts/framework-components/) dans votre projet Astro.
+📚 Apprendre comment utiliser [les composants de framework JavaScript](/fr/core-concepts/framework-components/) dans votre projet Astro.
