--- a/src/pages/es/core-concepts/framework-components.mdx
+++ b/src/pages/es/core-concepts/framework-components.mdx
@@ -11,52 +11,7 @@ Astro es compatible con una variedad de frameworks populares, incluyendo [React]
 
 ## Instalando integraciones
 
-Astro incluye integraciones opcionales de React, Preact, Svelte, Vue, SolidJS, AlpineJS y Lit. Una o varias de estas integraciones de Astro se pueden instalar y configurar en tu proyecto.
-
-Para configurar Astro para usar estos frameworks, primero, instala la integración correspondiente y cualquier peer-dependencia asociada:
-
-```bash
-npm install --save-dev @astrojs/react react react-dom
-```
-
-Luego importe y agregue la función a la lista de integraciones en `astro.config.mjs`:
-
-```js title="astro.config.mjs" ins={3} ins=/(?<!p)react\\(\\)/
-import { defineConfig } from 'astro/config';
-
-import react from '@astrojs/react';
-import preact from '@astrojs/preact';
-import svelte from '@astrojs/svelte';
-import vue from '@astrojs/vue';
-import solid from '@astrojs/solid-js';
-import lit from '@astrojs/lit';
-
-export default defineConfig({
-	integrations: [react(), preact(), svelte(), vue(), solid(), lit(), alpine()],
-});
-```
-
-⚙️ Consulte la [guía de integraciones](/es/guides/integrations-guide/) para obtener más información sobre la instalación y configuración de las integraciones de Astro.
-
-⚙️ ¿Quieres ver un ejemplo del framework de tu elección? Visite [astro.new](https://astro.new/) y seleccione la plantilla de framework correspondiente.
-
-## Usando componentes de otros frameworks
-
-¡Use sus componentes de framework en sus páginas, plantillas y componentes de Astro como si fueran componentes de Astro! Todos sus componentes pueden vivir juntos en `/src/components`, o pueden organizarse de la forma que desee.
-
-Para usar un componente de framework, impórtelo desde su ruta relativa en el script del componente de Astro. Luego, use el componente junto con otros componentes, elementos HTML y expresiones similares a JSX en el maquetado del componente.
-
-```astro title="src/pages/static-components.astro" ins={2,7}
----
-import MyReactComponent from '../components/MyReactComponent.jsx';
----
-<html>
-  <body>
-    <h1>¡Use los componentes de React directamente en Astro!</h1>
-    <MyReactComponent />
-  </body>
-</html>
-```
+Astro incluye [integraciones opcionales](/es/guides/integrations-guide) de React, Preact, Svelte, Vue, SolidJS, AlpineJS y Lit. Una o varias de estas integraciones de Astro se pueden instalar y configurar en tu proyecto.
 
 De forma predeterminada, los componentes de framework se renderizarán en el servidor, como HTML estático. Esto es útil para crear maquetados que no son interactivos y evitar enviar código JavaScript innecesario al cliente.
 
