--- a/src/pages/es/install/manual.mdx
+++ b/src/pages/es/install/manual.mdx
@@ -21,7 +21,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
 #### Instalación
 
-Si prefieres no usar el asistente de instalación automático `create-astro`, puedes instalar y configurar Astro manualmente siguiendo las instrucciones a continuación:
+Si prefieres no usar el asistente de instalación automático `create astro`, puedes instalar y configurar Astro manualmente siguiendo las instrucciones a continuación:
 
 ## 1. Crea una carpeta donde guardar todos los archivos
 
