--- a/src/pages/es/integrations/integrations.mdx
+++ b/src/pages/es/integrations/integrations.mdx
@@ -50,17 +50,17 @@ Aquí encontrarás páginas web en producción, repositorios, artículos y video
 
 ## Repositorios / Plantillas
 
-Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente si le pasas un argumento `--template` al comando `create-astro`.
+Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente si le pasas un argumento `--template` al comando `create astro`.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro -- --template <usuario-github>/<github-repo>
+  npm create astro@latest -- --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro --template <usuario-github>/<github-repo>
+  pnpm create astro@latest --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
