--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -696,10 +696,10 @@ La paginación pasará una prop `page` a cada página renderizada que represente
 | `page.url.prev`    | `string \| undefined` | La URL de la página anterior (será `undefined` si está en la página 1).                                                                                  |
 | `page.url.next`    | `string \| undefined` | La URL de la siguiente página (será `undefined` si no hay más páginas).                                                                                  |
 
-## Colecciones de Contenido (Experimental)
+## Colecciones de Contenido
 
 <p>
-  <Since v="1.7.0" />
+  <Since v="2.0.0" />
 </p>
 
 Las colecciones de contenido ofrecen APIs para configurar y consultar tus documentos Markdown o MDX en `src/content/`. Para obtener características y ejemplos de uso, [consulta nuestra guía de colecciones de contenido](/es/guides/content-collections/).
@@ -712,10 +712,10 @@ Las colecciones de contenido ofrecen APIs para configurar y consultar tus docume
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
-  schema: {
+  schema: z.object({
     title: z.string(),
     permalink: z.string().optional(),
-  },
+  }),
   slug({ id, data, defaultSlug, body }) {
     return data.permalink ?? defaultSlug;
   },
@@ -729,9 +729,9 @@ Esta función acepta las siguientes propiedades:
 
 #### `schema`
 
-**Type:** `TSchema extends ZodAnyObject | undefined`
+**Type:** `TSchema extends ZodType`
 
-`schema` es un objeto opcional para configurar el tipo y la forma del frontmatter del documento para una colección. Cada valor de objeto debe usar [un validador Zod](https://github.com/colinhacks/zod).
+`schema` es un objeto Zod opcional para configurar el tipo y la forma del frontmatter del documento para una colección. Cada valor de objeto debe usar [un validador Zod](https://github.com/colinhacks/zod).
 
 #### `slug()`
 
